--- a/similarity.ipynb
+++ b/similarity.ipynb
@@ -8,15 +8,14 @@
    "source": [
     "from gensim.models import KeyedVectors\n",
     "\n",
-    "model_path = '/Users/johnlee/Downloads/GoogleNews-vectors-negative300.bin'  # Update the path to your model file\n",
+    "model_path = '/Users/tmdgj/Downloads/GoogleNews-vectors-negative300.bin/GoogleNews-vectors-negative300.bin'  # Update the path to your model file\n",
     "model = KeyedVectors.load_word2vec_format(model_path, binary=True)\n",
-    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +24,7 @@
      "text": [
       "Most similar country to 'taco' is 'Mexico' with a similarity score of 0.27448761463165283\n",
       "\n",
-      "Most similar country to 'sushi' is 'Japan' with a similarity score of 0.28086233139038086\n",
+      "Most similar country to 'sushi' is 'Japan' with a similarity score of 0.28086230158805847\n",
       "\n",
       "Most similar country to 'pizza' is 'Italy' with a similarity score of 0.17121246457099915\n",
       "\n",
@@ -33,25 +32,25 @@
       "\n",
       "Most similar country to 'baguette' is 'France' with a similarity score of 0.3087157607078552\n",
       "\n",
-      "Most similar country to 'samba' is 'Brazil' with a similarity score of 0.3543606102466583\n",
+      "Most similar country to 'samba' is 'Brazil' with a similarity score of 0.35436058044433594\n",
       "\n",
       "Most similar country to 'kangaroo' is 'Australia' with a similarity score of 0.32052552700042725\n",
       "\n",
       "Most similar country to 'vodka' is 'Russia' with a similarity score of 0.3324565887451172\n",
       "\n",
-      "Most similar country to 'curry' is 'Bangladesh' with a similarity score of 0.2263948768377304\n",
+      "Most similar country to 'curry' is 'Bangladesh' with a similarity score of 0.2263948619365692\n",
       "\n",
       "Most similar country to 'pharaoh' is 'Egypt' with a similarity score of 0.4306657910346985\n",
       "\n",
       "Most similar country to 'kimchi' is 'Japan' with a similarity score of 0.3494246006011963\n",
       "\n",
-      "Most similar country to 'windmill' is 'Denmark' with a similarity score of 0.20664972066879272\n",
+      "Most similar country to 'windmill' is 'Denmark' with a similarity score of 0.20664970576763153\n",
       "\n",
       "Most similar country to 'bullfighting' is 'Spain' with a similarity score of 0.39931827783584595\n",
       "\n",
-      "Most similar country to 'pyramids' is 'Egypt' with a similarity score of 0.3956785500049591\n",
+      "Most similar country to 'pyramids' is 'Egypt' with a similarity score of 0.3956785798072815\n",
       "\n",
-      "Most similar country to 'fado' is 'Portugal' with a similarity score of 0.47092729806900024\n",
+      "Most similar country to 'fado' is 'Portugal' with a similarity score of 0.47092726826667786\n",
       "\n"
      ]
     }
@@ -100,20 +99,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Most similar country to 'kimchi' is 'Korea' with a similarity score of 0.4758823812007904\n"
+      "Most similar country to 'burger' is 'United_States' with a similarity score of 0.03061765432357788\n"
      ]
     }
    ],
    "source": [
-    "word = \"kimchi\"\n",
-    "country = \"Korea\"\n",
+    "word = \"burger\"\n",
+    "country = \"United_States\"\n",
+    "similarity_score= calculate_similarity(word, country, model)\n",
+    "print(f\"Most similar country to '{word}' is '{country}' with a similarity score of {similarity_score}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def get_average_word_vector(phrase, model):\n",
+    "    words = phrase.split()  # Split the phrase into individual words\n",
+    "    word_vectors = []\n",
+    "    \n",
+    "    for word in words:\n",
+    "        try:\n",
+    "            word_vectors.append(model[word])  # Get the vector for each word\n",
+    "        except KeyError:\n",
+    "            pass  # Ignore words that are not in the vocabulary\n",
+    "\n",
+    "    if not word_vectors:\n",
+    "        return None  # If none of the words are in the model's vocabulary\n",
+    "\n",
+    "    # Calculate the average vector\n",
+    "    return np.mean(word_vectors, axis=0)\n",
+    "\n",
+    "def calculate_similarity2(guess, target_word, model):\n",
+    "    try:\n",
+    "        # If the target_word is a multi-word phrase, calculate the average vector\n",
+    "        target_vector = get_average_word_vector(target_word, model) if ' ' in target_word else model[target_word]\n",
+    "        guess_vector = get_average_word_vector(guess, model) if ' ' in guess else model[guess]\n",
+    "\n",
+    "        if target_vector is not None and guess_vector is not None:\n",
+    "            similarity = np.dot(target_vector, guess_vector) / (np.linalg.norm(target_vector) * np.linalg.norm(guess_vector))\n",
+    "            return similarity\n",
+    "        else:\n",
+    "            return None  # If either word is not in the vocabulary\n",
+    "    except KeyError:\n",
+    "        return None  # Handle case where one or both w"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Most similar country to 'pizza' is 'America' with a similarity score of 0.05481930822134018\n"
+     ]
+    }
+   ],
+   "source": [
+    "word = \"pizza\"\n",
+    "country = \"America\"\n",
     "similarity_score= calculate_similarity(word, country, model)\n",
     "print(f\"Most similar country to '{word}' is '{country}' with a similarity score of {similarity_score}\")"
    ]
