--- a/similarity.ipynb
+++ b/similarity.ipynb
@@ -99,19 +99,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Most similar country to 'burger' is 'United_States' with a similarity score of 0.03061765432357788\n"
+      "Most similar country to 'panini' is 'United_States' with a similarity score of -0.021890301257371902\n"
      ]
     }
    ],
    "source": [
-    "word = \"burger\"\n",
+    "word = \"panini\"\n",
     "country = \"United_States\"\n",
     "similarity_score= calculate_similarity(word, country, model)\n",
     "print(f\"Most similar country to '{word}' is '{country}' with a similarity score of {similarity_score}\")"
